Fix bug for Firefox < 83 where right part of the content was clipped Because of some flex combination + items sizing (items were large because of long urls, and it made the parent container expand in width and getting wider than the popup, therefore not showing parts of the UI)
A bit tricky to solve because it has to work for sidebar mode and popup mode, in
Firefox < 83 and Firefox >= 83.

REF: https://trello.com/c/pjQVy2R7/435-sizing-bug-right-part-of-the-popin-is-clipped-out

--- a/src/popup/popup.scss
+++ b/src/popup/popup.scss
@@ -24,11 +24,8 @@ body {
   font-family: sans-serif;
   background-color: $ff-grey-10;
 
+  // NOTE: used to set flex: 1 for direct descendants but it generated a bug for Firefox < 83
   display: flex;
-  .authenticated,
-  .authentication {
-    flex: 1;
-  }
 
   &.sidebar {
     height: 100%;
